--- a/react/backend/package.json
+++ b/react/backend/package.json
@@ -10,6 +10,7 @@
   "author": "logesh",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dot": "^1.1.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
